<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/itclass"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iclass_title"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textColor="#F5B816"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="#3F51B5"
            android:text="@string/signin_fb"
            android:paddingRight="5dp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:drawableRight="@drawable/facebook"
            android:drawablePadding="10dp"
            />
        <Button
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="#1DA1F2"
            android:layout_marginLeft="30dp"
            android:text="@string/signin_tw"
            android:paddingRight="10dp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:drawableRight="@drawable/twitter"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="15dp"
        android:hint="@string/user_hint"
        android:layout_gravity="center"
        android:background="#F0F0F0"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#F0F0F0"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="15dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="#F5B816"
        android:text="Register"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#75C5A1"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="center"
        />
</LinearLayout>
